MillenniumDB/src/parser/query/grammar/mdb/autogenerated/MDBParser.cc

// Generated from MDBParser.g4 by ANTLR 4.9.3


#include "MDBParserVisitor.h"

#include "MDBParser.h"


using namespace antlrcpp;
using namespace antlr4;

MDBParser::MDBParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MDBParser::~MDBParser() {
  delete _interpreter;
}

std::string MDBParser::getGrammarFileName() const {
  return "MDBParser.g4";
}

const std::vector<std::string>& MDBParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MDBParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

MDBParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::RootContext::EOF() {
  return getToken(MDBParser::EOF, 0);
}

MDBParser::MatchQueryContext* MDBParser::RootContext::matchQuery() {
  return getRuleContext<MDBParser::MatchQueryContext>(0);
}

MDBParser::DescribeQueryContext* MDBParser::RootContext::describeQuery() {
  return getRuleContext<MDBParser::DescribeQueryContext>(0);
}

MDBParser::InsertQueryContext* MDBParser::RootContext::insertQuery() {
  return getRuleContext<MDBParser::InsertQueryContext>(0);
}

MDBParser::SetStatementContext* MDBParser::RootContext::setStatement() {
  return getRuleContext<MDBParser::SetStatementContext>(0);
}


size_t MDBParser::RootContext::getRuleIndex() const {
  return MDBParser::RuleRoot;
}


antlrcpp::Any MDBParser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::RootContext* MDBParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, MDBParser::RuleRoot);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MDBParser::K_SET) {
      setState(106);
      setStatement();
    }
    setState(112);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MDBParser::K_MATCH: {
        setState(109);
        matchQuery();
        break;
      }

      case MDBParser::K_DESCRIBE: {
        setState(110);
        describeQuery();
        break;
      }

      case MDBParser::K_INSERT: {
        setState(111);
        insertQuery();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(114);
    match(MDBParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MatchQueryContext ------------------------------------------------------------------

MDBParser::MatchQueryContext::MatchQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MDBParser::MatchStatementContext* MDBParser::MatchQueryContext::matchStatement() {
  return getRuleContext<MDBParser::MatchStatementContext>(0);
}

MDBParser::ReturnStatementContext* MDBParser::MatchQueryContext::returnStatement() {
  return getRuleContext<MDBParser::ReturnStatementContext>(0);
}

MDBParser::WhereStatementContext* MDBParser::MatchQueryContext::whereStatement() {
  return getRuleContext<MDBParser::WhereStatementContext>(0);
}

MDBParser::GroupByStatementContext* MDBParser::MatchQueryContext::groupByStatement() {
  return getRuleContext<MDBParser::GroupByStatementContext>(0);
}

MDBParser::OrderByStatementContext* MDBParser::MatchQueryContext::orderByStatement() {
  return getRuleContext<MDBParser::OrderByStatementContext>(0);
}


size_t MDBParser::MatchQueryContext::getRuleIndex() const {
  return MDBParser::RuleMatchQuery;
}


antlrcpp::Any MDBParser::MatchQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitMatchQuery(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::MatchQueryContext* MDBParser::matchQuery() {
  MatchQueryContext *_localctx = _tracker.createInstance<MatchQueryContext>(_ctx, getState());
  enterRule(_localctx, 2, MDBParser::RuleMatchQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    matchStatement();
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MDBParser::K_WHERE) {
      setState(117);
      whereStatement();
    }
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MDBParser::K_GROUP) {
      setState(120);
      groupByStatement();
    }
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MDBParser::K_ORDER) {
      setState(123);
      orderByStatement();
    }
    setState(126);
    returnStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescribeQueryContext ------------------------------------------------------------------

MDBParser::DescribeQueryContext::DescribeQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::DescribeQueryContext::K_DESCRIBE() {
  return getToken(MDBParser::K_DESCRIBE, 0);
}

MDBParser::FixedNodeInsideContext* MDBParser::DescribeQueryContext::fixedNodeInside() {
  return getRuleContext<MDBParser::FixedNodeInsideContext>(0);
}


size_t MDBParser::DescribeQueryContext::getRuleIndex() const {
  return MDBParser::RuleDescribeQuery;
}


antlrcpp::Any MDBParser::DescribeQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitDescribeQuery(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::DescribeQueryContext* MDBParser::describeQuery() {
  DescribeQueryContext *_localctx = _tracker.createInstance<DescribeQueryContext>(_ctx, getState());
  enterRule(_localctx, 4, MDBParser::RuleDescribeQuery);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(MDBParser::K_DESCRIBE);
    setState(129);
    fixedNodeInside();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertQueryContext ------------------------------------------------------------------

MDBParser::InsertQueryContext::InsertQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::InsertQueryContext::K_INSERT() {
  return getToken(MDBParser::K_INSERT, 0);
}

MDBParser::InsertLabelListContext* MDBParser::InsertQueryContext::insertLabelList() {
  return getRuleContext<MDBParser::InsertLabelListContext>(0);
}

MDBParser::InsertPropertyListContext* MDBParser::InsertQueryContext::insertPropertyList() {
  return getRuleContext<MDBParser::InsertPropertyListContext>(0);
}

MDBParser::InsertEdgeListContext* MDBParser::InsertQueryContext::insertEdgeList() {
  return getRuleContext<MDBParser::InsertEdgeListContext>(0);
}


size_t MDBParser::InsertQueryContext::getRuleIndex() const {
  return MDBParser::RuleInsertQuery;
}


antlrcpp::Any MDBParser::InsertQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitInsertQuery(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::InsertQueryContext* MDBParser::insertQuery() {
  InsertQueryContext *_localctx = _tracker.createInstance<InsertQueryContext>(_ctx, getState());
  enterRule(_localctx, 6, MDBParser::RuleInsertQuery);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    match(MDBParser::K_INSERT);
    setState(135);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MDBParser::K_LABEL: {
        setState(132);
        insertLabelList();
        break;
      }

      case MDBParser::K_PROPERTY: {
        setState(133);
        insertPropertyList();
        break;
      }

      case MDBParser::K_EDGE: {
        setState(134);
        insertEdgeList();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertLabelListContext ------------------------------------------------------------------

MDBParser::InsertLabelListContext::InsertLabelListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::InsertLabelListContext::K_LABEL() {
  return getToken(MDBParser::K_LABEL, 0);
}

std::vector<MDBParser::InsertLabelElementContext *> MDBParser::InsertLabelListContext::insertLabelElement() {
  return getRuleContexts<MDBParser::InsertLabelElementContext>();
}

MDBParser::InsertLabelElementContext* MDBParser::InsertLabelListContext::insertLabelElement(size_t i) {
  return getRuleContext<MDBParser::InsertLabelElementContext>(i);
}

std::vector<tree::TerminalNode *> MDBParser::InsertLabelListContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::InsertLabelListContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}


size_t MDBParser::InsertLabelListContext::getRuleIndex() const {
  return MDBParser::RuleInsertLabelList;
}


antlrcpp::Any MDBParser::InsertLabelListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitInsertLabelList(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::InsertLabelListContext* MDBParser::insertLabelList() {
  InsertLabelListContext *_localctx = _tracker.createInstance<InsertLabelListContext>(_ctx, getState());
  enterRule(_localctx, 8, MDBParser::RuleInsertLabelList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    match(MDBParser::K_LABEL);
    setState(138);
    insertLabelElement();
    setState(143);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MDBParser::COMMA) {
      setState(139);
      match(MDBParser::COMMA);
      setState(140);
      insertLabelElement();
      setState(145);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertPropertyListContext ------------------------------------------------------------------

MDBParser::InsertPropertyListContext::InsertPropertyListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::InsertPropertyListContext::K_PROPERTY() {
  return getToken(MDBParser::K_PROPERTY, 0);
}

std::vector<MDBParser::InsertPropertyElementContext *> MDBParser::InsertPropertyListContext::insertPropertyElement() {
  return getRuleContexts<MDBParser::InsertPropertyElementContext>();
}

MDBParser::InsertPropertyElementContext* MDBParser::InsertPropertyListContext::insertPropertyElement(size_t i) {
  return getRuleContext<MDBParser::InsertPropertyElementContext>(i);
}

std::vector<tree::TerminalNode *> MDBParser::InsertPropertyListContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::InsertPropertyListContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}


size_t MDBParser::InsertPropertyListContext::getRuleIndex() const {
  return MDBParser::RuleInsertPropertyList;
}


antlrcpp::Any MDBParser::InsertPropertyListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitInsertPropertyList(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::InsertPropertyListContext* MDBParser::insertPropertyList() {
  InsertPropertyListContext *_localctx = _tracker.createInstance<InsertPropertyListContext>(_ctx, getState());
  enterRule(_localctx, 10, MDBParser::RuleInsertPropertyList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    match(MDBParser::K_PROPERTY);
    setState(147);
    insertPropertyElement();
    setState(152);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MDBParser::COMMA) {
      setState(148);
      match(MDBParser::COMMA);
      setState(149);
      insertPropertyElement();
      setState(154);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertEdgeListContext ------------------------------------------------------------------

MDBParser::InsertEdgeListContext::InsertEdgeListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::InsertEdgeListContext::K_EDGE() {
  return getToken(MDBParser::K_EDGE, 0);
}

std::vector<MDBParser::InsertEdgeElementContext *> MDBParser::InsertEdgeListContext::insertEdgeElement() {
  return getRuleContexts<MDBParser::InsertEdgeElementContext>();
}

MDBParser::InsertEdgeElementContext* MDBParser::InsertEdgeListContext::insertEdgeElement(size_t i) {
  return getRuleContext<MDBParser::InsertEdgeElementContext>(i);
}

std::vector<tree::TerminalNode *> MDBParser::InsertEdgeListContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::InsertEdgeListContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}


size_t MDBParser::InsertEdgeListContext::getRuleIndex() const {
  return MDBParser::RuleInsertEdgeList;
}


antlrcpp::Any MDBParser::InsertEdgeListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitInsertEdgeList(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::InsertEdgeListContext* MDBParser::insertEdgeList() {
  InsertEdgeListContext *_localctx = _tracker.createInstance<InsertEdgeListContext>(_ctx, getState());
  enterRule(_localctx, 12, MDBParser::RuleInsertEdgeList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    match(MDBParser::K_EDGE);
    setState(156);
    insertEdgeElement();
    setState(161);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MDBParser::COMMA) {
      setState(157);
      match(MDBParser::COMMA);
      setState(158);
      insertEdgeElement();
      setState(163);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertLabelElementContext ------------------------------------------------------------------

MDBParser::InsertLabelElementContext::InsertLabelElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::InsertLabelElementContext::L_PAR() {
  return getToken(MDBParser::L_PAR, 0);
}

tree::TerminalNode* MDBParser::InsertLabelElementContext::COMMA() {
  return getToken(MDBParser::COMMA, 0);
}

tree::TerminalNode* MDBParser::InsertLabelElementContext::STRING() {
  return getToken(MDBParser::STRING, 0);
}

tree::TerminalNode* MDBParser::InsertLabelElementContext::R_PAR() {
  return getToken(MDBParser::R_PAR, 0);
}

MDBParser::IdentifierContext* MDBParser::InsertLabelElementContext::identifier() {
  return getRuleContext<MDBParser::IdentifierContext>(0);
}

tree::TerminalNode* MDBParser::InsertLabelElementContext::ANON_ID() {
  return getToken(MDBParser::ANON_ID, 0);
}


size_t MDBParser::InsertLabelElementContext::getRuleIndex() const {
  return MDBParser::RuleInsertLabelElement;
}


antlrcpp::Any MDBParser::InsertLabelElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitInsertLabelElement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::InsertLabelElementContext* MDBParser::insertLabelElement() {
  InsertLabelElementContext *_localctx = _tracker.createInstance<InsertLabelElementContext>(_ctx, getState());
  enterRule(_localctx, 14, MDBParser::RuleInsertLabelElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(164);
    match(MDBParser::L_PAR);
    setState(167);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MDBParser::K_ACYCLIC:
      case MDBParser::K_ANY_ACYCLIC:
      case MDBParser::K_ANY_SIMPLE:
      case MDBParser::K_ANY_TRAILS:
      case MDBParser::K_ANY:
      case MDBParser::K_AND:
      case MDBParser::K_AVG:
      case MDBParser::K_ALL_COUNT:
      case MDBParser::K_ALL_SHORTEST_ACYCLIC:
      case MDBParser::K_ALL_SHORTEST_SIMPLE:
      case MDBParser::K_ALL_SHORTEST_TRAILS:
      case MDBParser::K_ALL:
      case MDBParser::K_ASC:
      case MDBParser::K_BY:
      case MDBParser::K_BOOL:
      case MDBParser::K_COUNT:
      case MDBParser::K_DESCRIBE:
      case MDBParser::K_DESC:
      case MDBParser::K_DISTINCT:
      case MDBParser::K_EDGE:
      case MDBParser::K_INTEGER:
      case MDBParser::K_INSERT:
      case MDBParser::K_IS:
      case MDBParser::K_FLOAT:
      case MDBParser::K_GROUP:
      case MDBParser::K_LABEL:
      case MDBParser::K_LIMIT:
      case MDBParser::K_MAX:
      case MDBParser::K_MATCH:
      case MDBParser::K_MIN:
      case MDBParser::K_OPTIONAL:
      case MDBParser::K_ORDER:
      case MDBParser::K_OR:
      case MDBParser::K_PROPERTY:
      case MDBParser::K_NOT:
      case MDBParser::K_NULL:
      case MDBParser::K_RETURN:
      case MDBParser::K_SET:
      case MDBParser::K_SIMPLE:
      case MDBParser::K_STRING:
      case MDBParser::K_SUM:
      case MDBParser::K_TRAILS:
      case MDBParser::K_WHERE:
      case MDBParser::NAME: {
        setState(165);
        identifier();
        break;
      }

      case MDBParser::ANON_ID: {
        setState(166);
        match(MDBParser::ANON_ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(169);
    match(MDBParser::COMMA);
    setState(170);
    match(MDBParser::STRING);
    setState(171);
    match(MDBParser::R_PAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertPropertyElementContext ------------------------------------------------------------------

MDBParser::InsertPropertyElementContext::InsertPropertyElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::InsertPropertyElementContext::L_PAR() {
  return getToken(MDBParser::L_PAR, 0);
}

MDBParser::FixedNodeInsideContext* MDBParser::InsertPropertyElementContext::fixedNodeInside() {
  return getRuleContext<MDBParser::FixedNodeInsideContext>(0);
}

std::vector<tree::TerminalNode *> MDBParser::InsertPropertyElementContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::InsertPropertyElementContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}

tree::TerminalNode* MDBParser::InsertPropertyElementContext::STRING() {
  return getToken(MDBParser::STRING, 0);
}

MDBParser::ValueContext* MDBParser::InsertPropertyElementContext::value() {
  return getRuleContext<MDBParser::ValueContext>(0);
}

tree::TerminalNode* MDBParser::InsertPropertyElementContext::R_PAR() {
  return getToken(MDBParser::R_PAR, 0);
}


size_t MDBParser::InsertPropertyElementContext::getRuleIndex() const {
  return MDBParser::RuleInsertPropertyElement;
}


antlrcpp::Any MDBParser::InsertPropertyElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitInsertPropertyElement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::InsertPropertyElementContext* MDBParser::insertPropertyElement() {
  InsertPropertyElementContext *_localctx = _tracker.createInstance<InsertPropertyElementContext>(_ctx, getState());
  enterRule(_localctx, 16, MDBParser::RuleInsertPropertyElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(173);
    match(MDBParser::L_PAR);
    setState(174);
    fixedNodeInside();
    setState(175);
    match(MDBParser::COMMA);
    setState(176);
    match(MDBParser::STRING);
    setState(177);
    match(MDBParser::COMMA);
    setState(178);
    value();
    setState(179);
    match(MDBParser::R_PAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertEdgeElementContext ------------------------------------------------------------------

MDBParser::InsertEdgeElementContext::InsertEdgeElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MDBParser::InsertEdgeElementContext::L_PAR() {
  return getToken(MDBParser::L_PAR, 0);
}

std::vector<MDBParser::FixedNodeInsideContext *> MDBParser::InsertEdgeElementContext::fixedNodeInside() {
  return getRuleContexts<MDBParser::FixedNodeInsideContext>();
}

MDBParser::FixedNodeInsideContext* MDBParser::InsertEdgeElementContext::fixedNodeInside(size_t i) {
  return getRuleContext<MDBParser::FixedNodeInsideContext>(i);
}

std::vector<tree::TerminalNode *> MDBParser::InsertEdgeElementContext::COMMA() {
  return getTokens(MDBParser::COMMA);
}

tree::TerminalNode* MDBParser::InsertEdgeElementContext::COMMA(size_t i) {
  return getToken(MDBParser::COMMA, i);
}

MDBParser::IdentifierContext* MDBParser::InsertEdgeElementContext::identifier() {
  return getRuleContext<MDBParser::IdentifierContext>(0);
}

tree::TerminalNode* MDBParser::InsertEdgeElementContext::R_PAR() {
  return getToken(MDBParser::R_PAR, 0);
}


size_t MDBParser::InsertEdgeElementContext::getRuleIndex() const {
  return MDBParser::RuleInsertEdgeElement;
}


antlrcpp::Any MDBParser::InsertEdgeElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MDBParserVisitor*>(visitor))
    return parserVisitor->visitInsertEdgeElement(this);
  else
    return visitor->visitChildren(this);
}

MDBParser::InsertEdgeElementContext* MDBParser::insertEdgeElement() {
  InsertEdgeElementContext *_localctx = _tracker.createInstance<InsertEdgeElementContext>(_ctx, getState());
  enterRule(_localctx, 18, MDBParser::RuleInsertEdgeElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(181);
    match(MDBParser::L_PAR);
    setState(182);
    fixedNodeInside();
    setState(183);
    match(MDBParser::COMMA);
    setState(184);
    fixedNodeInside();
    setState(185);
    match(MDBParser::COMMA);
    setState(186);
    identifier();
    setState(187);
    match(MDBParser::R_PAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
